; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_lapic_native.c_lapic_send_ipi.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_lapic_native.c_lapic_send_ipi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lapic_interrupt_base = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@LAPIC_ICR_DS_PENDING = common dso_local global i32 0, align 4
@cpu_to_lapic = common dso_local global i32* null, align 8
@LAPIC_ICR_DM_FIXED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lapic_send_ipi(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @lapic_interrupt_base, align 4
  %8 = icmp slt i32 %6, %7
  br i1 %8, label %9, label %13

9:                                                ; preds = %2
  %10 = load i32, i32* @lapic_interrupt_base, align 4
  %11 = load i32, i32* %4, align 4
  %12 = add nsw i32 %11, %10
  store i32 %12, i32* %4, align 4
  br label %13

13:                                               ; preds = %9, %2
  %14 = load i32, i32* @FALSE, align 4
  %15 = call i32 @ml_set_interrupts_enabled(i32 %14)
  store i32 %15, i32* %5, align 4
  br label %16

16:                                               ; preds = %21, %13
  %17 = call i32 (...) @LAPIC_READ_ICR()
  %18 = load i32, i32* @LAPIC_ICR_DS_PENDING, align 4
  %19 = and i32 %17, %18
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %23

21:                                               ; preds = %16
  %22 = call i32 (...) @cpu_pause()
  br label %16

23:                                               ; preds = %16
  %24 = load i32*, i32** @cpu_to_lapic, align 8
  %25 = load i32, i32* %3, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds i32, i32* %24, i64 %26
  %28 = load i32, i32* %27, align 4
  %29 = load i32, i32* %4, align 4
  %30 = load i32, i32* @LAPIC_ICR_DM_FIXED, align 4
  %31 = or i32 %29, %30
  %32 = call i32 @LAPIC_WRITE_ICR(i32 %28, i32 %31)
  %33 = load i32, i32* %5, align 4
  %34 = call i32 @ml_set_interrupts_enabled(i32 %33)
  ret void
}

declare dso_local i32 @ml_set_interrupts_enabled(i32) #1

declare dso_local i32 @LAPIC_READ_ICR(...) #1

declare dso_local i32 @cpu_pause(...) #1

declare dso_local i32 @LAPIC_WRITE_ICR(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
